Sun Feb 11 23:28:20 2001  George Lebl <jirka@5z.com>

	* menu-fentry.c: sanity check in get_applet_goad_id_from_dentry

Sun Feb 11 21:53:47 2001  George Lebl <jirka@5z.com>

	* drawer.c: fix a bug where a corrupted config could crash the panel

2001-02-11  Julian Missig  <julian@jabber.org>

	* status.c: (load_status_applet): I had set the wrong object for the
	gtk_signal_connect_after if the fixed container existed.

Fri Feb 09 21:44:41 2001  George Lebl <jirka@5z.com>

	* session.c, extern.c: int->gboolean cleanup, and increase cookie
	  when applet not responding in non interactive mode

Fri Feb 09 00:18:30 2001  George Lebl <jirka@5z.com>

	* gnome-panel-properties.c: Apply patch from Havoc Pennington
	  <hp@redhat.com> to fix grabbing of global keys.

Thu Feb 08 23:29:26 2001  George Lebl <jirka@5z.com>

	* basep-widget.[ch], panel.c, floating-widget.c, sliding-widget.c:
	  remember the position of the click offsets for panel moving, so
	  that moving floating and sliding panels is more natural, that is
	  it holds onto the same point on the panel rather then moving when
	  over the edge which felt too weird.  Also simplifies the code a
	  bit.

Tue Feb 06 18:34:05 2001  George Lebl <jirka@5z.com>

	* basep-widget.c, foobar-widget.c: Set wmname/wmclass to
	  panel_window/Panel on the panel windows.

2001-01-29  John Harper  <jsh@eazel.com>

	* session.c (panel_session_save): deleted the code to hide
	panels after responding to a save-yourself message (that is
	before a session shutdown). The reason is that if the shutdown
	is later cancelled the panels are left hidden

	(An alternative fix would be to reshow the panels if a
	shutdown-cancelled message is received, but I can't see the
	point of hiding the panels anyway - they will be destroyed if
	the panel exits?)

2001-01-30  jacob berkman  <jacob@ximian.com>

	* foobar-widget.c (task_notify): hide the menu item when the task
	is destroyed

	* scroll-menu.c (scroll_menu_init): sink the scroll buttons so