@@ -1,3 +1,8 @@
+Mon Feb 12 00:39:50 2001  George Lebl <jirka@5z.com>
+
+	* panel.c, extern.[ch]: export ref/unref and do some more checking.
+	  there was a race when applet died during registration.
+
 Sun Feb 11 23:28:20 2001  George Lebl <jirka@5z.com>
 
 	* menu-fentry.c: sanity check in get_applet_goad_id_from_dentry
